--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -2,7 +2,7 @@ node {
    def commit_id
    stage('Preparation') {
      checkout scm
-     bat "git rev-parse --short HEAD > .git/commit-id"                        
+     git "rev-parse --short HEAD > .git/commit-id"                        
      commit_id = readFile('.git/commit-id').trim()
    }
    stage('test') {
