--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -6,8 +6,10 @@ node {
      commit_id = readFile('.git/commit-id').trim()
    }
    stage('test') {
+     nodejs(nodeJSInstallationName: 'LatestNode') {
        bat 'npm install --only=dev'
        bat 'npm test'
+     }
    }
    stage('docker build/push') {
      docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
