--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -2,8 +2,14 @@ node {
    def commit_id
    stage('Preparation') {
      checkout scm
-     bat "git rev-parse --short HEAD > .git/commit-id"                        
+     sh "git rev-parse --short HEAD > .git/commit-id"                        
      commit_id = readFile('.git/commit-id').trim()
+   }
+   stage('test') {
+     nodejs(nodeJSInstallationName: 'LatestNode') {
+       sh 'npm install --only=dev'
+       sh 'npm test'
+     }
    }
    stage('docker build/push') {
      docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
