--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -7,7 +7,7 @@ node {
    }
    stage('docker build/push') {
      docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
-       def app = docker.build("av4veena/nodejs-docker-pipeline:${commit_id}", '.').push()
+       docker pull av4veena/nodejs-docker-pipeline
      }
    }
 }
